--- a/views/rating_table.xml
+++ b/views/rating_table.xml
@@ -380,6 +380,30 @@
             </tree>
         </field>
     </record>
+    <record id="users_form_inherit" model="ir.ui.view">
+        <field name="name">Users</field>
+        <field name="model">res.users</field>
+<!--        <field name="mode">primary</field>-->
+<!--        <field name="priority" eval="500"/>-->
+        <field name="inherit_id" ref="base.view_users_form"/>
+        <field name="arch" type="xml">
+            <form>
+                <header>
+                    <button name="" string="Reset Password" type="object"
+                            class="oe_highlight" />
+                </header>
+                <sheet>
+                    <group>
+                        <field name="name"/>
+                        <field name="login" string="User Name"/>
+                        <field name="reset_mail"/>
+
+                    </group>
+
+                </sheet>
+            </form>
+        </field>
+    </record>
     <record id="travel_users1" model="ir.actions.act_window">
         <field name="name">Users</field>
         <field name="res_model">res.users</field>
