--- a/wizard/users.xml
+++ b/wizard/users.xml
@@ -10,6 +10,7 @@
                             <field name="travel_agency_branch" readonly="1" force_save="1" attrs="{'invisible': ['|',('branch', '!=', True),('user_type', '=', 'person')]}"/>
                             <field name="travel_agency" readonly="1" force_save="1" attrs="{'invisible': ['|',('branch', '!=', True),('user_type', '=', 'person')]}"/>
                             <field name="branch" invisible="1"/>
+                            <field name="reset_mail"/>
                   </xpath>
             <xpath expr="//footer" position="inside">
 
