--- a/views/rating_table.xml
+++ b/views/rating_table.xml
@@ -388,10 +388,10 @@
         <field name="inherit_id" ref="base.view_users_form"/>
         <field name="arch" type="xml">
             <form>
-                <header>
-                    <button name="" string="Reset Password" type="object"
-                            class="oe_highlight" />
-                </header>
+<!--                <header>-->
+<!--                    <button name="" string="Reset Password" type="object"-->
+<!--                            class="oe_highlight" />-->
+<!--                </header>-->
                 <sheet>
                     <group>
                         <field name="name"/>
