--- a/views/menu_item.xml
+++ b/views/menu_item.xml
@@ -34,8 +34,8 @@
                   action="benefits_action" sequence="0"/>
         <menuitem id="orders_menu" name="Orders" parent="configuration_view_menu2"
                   action="orders_action" sequence="20"/>
-        <menuitem action="travel_users1" id="users"
-                  parent="travel_policy_view_menu2"  groups="smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group" />
+<!--        <menuitem action="travel_users1" id="users"-->
+<!--                  parent="travel_policy_view_menu2"  groups="smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group" />-->
         <menuitem id="excess_menu" name="Excess" parent="configuration_view_menu2"
                   action="excess_action" sequence="2"/>
         <menuitem id="travel_menu_id" name="Travel "
